corp-nav alignment fix

--- a/_sass/_navs.scss
+++ b/_sass/_navs.scss
@@ -46,7 +46,7 @@ nav {
     padding: 1rem;
     width: 100%;
     margin-right: 0;
-    justify-content: end;
+    justify-content: flex-end;
   }
   img.corp-logo {
     width: 7rem;
